fix fixed navbar overlapping images on 768px screen

--- a/the-lion-king/css/characters.css
+++ b/the-lion-king/css/characters.css
@@ -174,3 +174,20 @@ body {
     margin-top: -10px;
   }
 }
+
+@media (max-width: 768px) {
+  /* without z-index: 99, images will overlap the fixed navbar on scroll */  
+    nav {
+      position: fixed;
+      z-index: 99;
+    }
+    .gallery {
+      margin-top: 80px;
+    }
+    .gallery__img {
+      margin-top: -2px;
+    }
+    .footer-container {
+      margin-top: -10px;
+    }
+  }
